# UR-Cobot-Controller

./: CMakeLists.txt  README.md  package.xml
data/: icra23.txt  input_joint_space.txt  input_motion.txt  reconf_motion_1.txt  tmech22.txt  tmech22_copy.txt
include/: ur5e_controller.h  ur_controller.h
matlab/: controlURRobot.m  icra23.mat  icra23_1.mat  tntp_prm.mat  ur5e.m  ur_ros_array_joint.m  ur_ros_initialise.m  ur_ros_two_joints.m
matlab/data/tmech22/: motion_1.mat  motion_2.mat  motion_3.mat  reconf_1.mat  reconf_2.mat  whole_motion_1.mat
src/: main.cpp  ur5e_controller.cpp  ur_controller.cpp
